- Using the DTAIDistance library because it is faster and supports a warping window constraint. - Restrict the search range for the length of the subsequences. - General sepeedup.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backcall==0.1.0
 cycler==0.10.0
 Cython==0.29.10
 decorator==4.4.0
+dtaidistance==1.2.2
 dtw==1.3.3
 ipython==7.4.0
 ipython-genutils==0.2.0
